kitten/reported_bugs/rust/rust-78653/stderr.txt
error[E0627]: yield expression outside of generator literal

  --> mutant.rs:20:1

   |

20 | / yield ( 8 , || {

21 | | for _ in 0 .. 8 {

22 | | yield ;

23 | | }

24 | | } ) ;

   | |___^



error: internal compiler error: compiler/rustc_typeck/src/check/fn_ctxt/_impl.rs:128:13: no type for local variable local 0 .. 8 (hir_id=HirId { owner: DefId(0:10 ~ mutant[8787]::main), local_id: 36 })

  --> mutant.rs:21:10

   |

21 | for _ in 0 .. 8 {

   |          ^^^^^^



thread 'rustc' panicked at 'Box<Any>', /rustc/043eca7f0b34d12e61c44206beca740628647080/compiler/rustc_errors/src/lib.rs:891:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.49.0-nightly (043eca7f0 2020-10-17) running on x86_64-unknown-linux-gnu



note: compiler flags: -C debuginfo=2 -C opt-level=1 -C target-cpu=skylake --crate-type staticlib



query stack during panic:

#0 [typeck] type-checking `main`

#1 [typeck_item_bodies] type-checking all item bodies

end of query stack

error: aborting due to 2 previous errors



For more information about this error, try `rustc --explain E0627`.

